my module 4 exercsies and practices

--- a/module4/practices/SubqueryPractice.ipynb
+++ b/module4/practices/SubqueryPractice.ipynb
@@ -24,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: dsa_ro_user@dsa_ro'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "%sql postgres://dsa_ro_user:readonly@pgsql.dsa.lan/dsa_ro"
@@ -34,18 +45,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>state_alpha_code</th>\n",
+       "        <th>state_number_code</th>\n",
+       "        <th>state_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AK</td>\n",
+       "        <td>2</td>\n",
+       "        <td>ALASKA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AL</td>\n",
+       "        <td>1</td>\n",
+       "        <td>ALABAMA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR</td>\n",
+       "        <td>5</td>\n",
+       "        <td>ARKANSAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AS</td>\n",
+       "        <td>60</td>\n",
+       "        <td>AMERICAN SAMOA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AZ</td>\n",
+       "        <td>4</td>\n",
+       "        <td>ARIZONA</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('AK', 2, 'ALASKA'),\n",
+       " ('AL', 1, 'ALABAMA'),\n",
+       " ('AR', 5, 'ARKANSAS'),\n",
+       " ('AS', 60, 'AMERICAN SAMOA'),\n",
+       " ('AZ', 4, 'ARIZONA')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM util_us_states LIMIT 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>state_number_code</th>\n",
+       "        <th>county_number_code</th>\n",
+       "        <th>county_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>001</td>\n",
+       "        <td>Autauga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>003</td>\n",
+       "        <td>Baldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>005</td>\n",
+       "        <td>Barbour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>007</td>\n",
+       "        <td>Bibb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>009</td>\n",
+       "        <td>Blount</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, '001', 'Autauga'),\n",
+       " (1, '003', 'Baldwin'),\n",
+       " (1, '005', 'Barbour'),\n",
+       " (1, '007', 'Bibb'),\n",
+       " (1, '009', 'Blount')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM us_second_order_divisions LIMIT 5"
    ]
@@ -61,16 +186,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>state_number_code</th>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>48</td>\n",
+       "        <td>254</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(48, 254)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "SELECT state_number_code, COUNT(*)\n",
+    "FROM us_second_order_divisions\n",
+    "GROUP BY state_number_code\n",
+    "HAVING COUNT(*) = (SELECT COUNT(*)\n",
+    "  FROM us_second_order_divisions\n",
+    "  GROUP BY state_number_code\n",
+    "    ORDER BY COUNT(*) DESC\n",
+    "  LIMIT 1)"
    ]
   },
   {
@@ -83,15 +242,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>state_number_code</th>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>66</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>11</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(66, 1), (11, 1)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "SELECT state_number_code, COUNT(*)\n",
+    "FROM us_second_order_divisions\n",
+    "GROUP BY state_number_code\n",
+    "HAVING COUNT(*) = (SELECT COUNT(*)\n",
+    "  FROM us_second_order_divisions\n",
+    "  GROUP BY state_number_code\n",
+    "  ORDER BY COUNT(*) ASC\n",
+    "  LIMIT 1)"
    ]
   },
   {
@@ -398,12 +596,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>personal</th>\n",
+       "        <th>family</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>dyer</td>\n",
+       "        <td>William</td>\n",
+       "        <td>Dyer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>roe</td>\n",
+       "        <td>Valentina</td>\n",
+       "        <td>Roerich</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>danforth</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Danforth</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('dyer', 'William', 'Dyer'),\n",
+       " ('roe', 'Valentina', 'Roerich'),\n",
+       " ('danforth', 'Frank', 'Danforth')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
-    "\n",
+    "SELECT * FROM Person\n",
+    "WHERE NOT EXISTS( \n",
+    "    SELECT 'x' FROM Survey WHERE Person.id = Survey.Person\n",
+    "        AND quant = 'temp'\n",
+    ")\n",
     "\n",
     "\n",
     "\n"
@@ -422,9 +669,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: dsa_ro_user@dvdrental'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "%sql postgres://dsa_ro_user:readonly@pgsql.dsa.lan/dvdrental"
@@ -440,12 +706,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dvdrental\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(6,)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
-    "\n",
+    "SELECT COUNT(*)\n",
+    "FROM (\n",
+    "    SELECT actor_id, COUNT(*)\n",
+    "    FROM film_actor \n",
+    "    GROUP BY actor_id\n",
+    "    HAVING COUNT(*) > 35\n",
+    "    ) as rent_counts\n",
     "\n",
     "\n",
     "\n"
@@ -461,13 +763,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dvdrental\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2151</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2151,)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
-    "\n",
-    "\n",
+    "SELECT COUNT(*)\n",
+    "FROM rental \n",
+    "INNER JOIN (\n",
+    "    SELECT SUM(return_date - rental_date) as rental_time,\n",
+    "            customer_id\n",
+    "        ,COUNT(*) as cnt \n",
+    "    FROM rental\n",
+    "    GROUP BY customer_id\n",
+    "    HAVING SUM(return_date - rental_date) > '170 days'::interval \n",
+    "    ) as top_renters \n",
+    "USING (customer_id)\n",
     "\n",
     "\n"
    ]
