my mod 5 practices

--- a/module5/practices/FunctionsPractice.ipynb
+++ b/module5/practices/FunctionsPractice.ipynb
@@ -332,12 +332,12 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "CREATE OR REPLACE FUNCTION SSO.totalSites ()\n",
+    "CREATE OR REPLACE FUNCTION may96c.totalSites ()\n",
     "RETURNS integer AS $$\n",
     "DECLARE\n",
     "    total integer;\n",
     "BEGIN\n",
-    "   SELECT count(*) INTO total FROM SSO.site;\n",
+    "   SELECT count(*) INTO total FROM may96c.site;\n",
     "   RETURN total;\n",
     "END;\n",
     "$$ LANGUAGE plpgsql;"
@@ -348,7 +348,11 @@
    "metadata": {},
    "source": [
     "# 1.2 Show the \\df\n",
-    "\n",
+    "                          List of functions\n",
+    " Schema |    Name    | Result data type | Argument data types | Type\n",
+    "--------+------------+------------------+---------------------+------\n",
+    " may96c | totalsites | integer          |                     | func\n",
+    "(1 row)\n",
     "\n"
    ]
   },
@@ -358,6 +362,11 @@
    "source": [
     "# 1.3 Show the result of running the function\n",
     "\n",
+    "dsa_student=> select may96c.totalSites();\n",
+    " totalsites\n",
+    "------------\n",
+    "          3\n",
+    "(1 row)\n",
     "\n",
     "\n"
    ]
@@ -392,13 +401,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "CREATE OR REPLACE FUNCTION SSO.totalReadingsForSite(p_site text)\n",
+    "CREATE OR REPLACE FUNCTION may96c.totalReadingsForSite(p_site text)\n",
     "RETURNS integer AS $$\n",
     "DECLARE\n",
     "    total integer;\n",
     "BEGIN\n",
     "   SELECT count(*) INTO total\n",
-    "    FROM SSO.visited v JOIN SSO.survey s ON (v.id::int=s.taken::int)\n",
+    "    FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
     "    WHERE v.site= p_site ;\n",
     "   RETURN total;\n",
     "END;\n",
@@ -411,6 +420,11 @@
    "source": [
     "# 1.2 Show the \\df\n",
     "\n",
+    "dsa_student=> \\df may96c.totalReadingsForSite\n",
+    "                               List of functions\n",
+    " Schema |         Name         | Result data type | Argument data types | Type\n",
+    "--------+----------------------+------------------+---------------------+------\n",
+    " may96c | totalreadingsforsite | integer          | p_site text         | func\n",
     "\n"
    ]
   },
@@ -436,7 +450,11 @@
    "source": [
     "# 1.3 Show the result of running the function\n",
     "\n",
-    "\n",
+    "dsa_student=> select may96c.totalReadingsForSite('DR-3')\n",
+    "dsa_student-> ;\n",
+    " totalreadingsforsite\n",
+    "----------------------\n",
+    "                   13\n",
     "\n"
    ]
   },
