--- a/module5/practices/TriggersPractice.ipynb
+++ b/module5/practices/TriggersPractice.ipynb
@@ -321,14 +321,24 @@
    "source": [
     "# Paste your Edit of the UPDATE statement below this line\n",
     "\n",
-    "\n",
+    "UPDATE may96c.survey \n",
+    "SET reading = reading + 0.01\n",
+    "WHERE person = 'roe';\n",
     "\n",
     "\n",
     "# Paste your Edit of the SELECT and Result statement below this line\n",
     "\n",
+    "SELECT *  FROM may96c.survey\n",
+    "WHERE person = 'roe' ;\n",
     "\n",
     "\n",
-    "\n"
+    "dsa_student=> SELECT *  FROM may96c.survey\n",
+    "dsa_student-> WHERE person = 'roe' ;\n",
+    " taken | person | quant | reading\n",
+    "-------+--------+-------+---------\n",
+    "   752 | roe    | sal   |   41.61\n",
+    "   837 | roe    | sal   |   22.51\n",
+    "   844 | roe    | rad   |   11.26"
    ]
   },
   {
@@ -344,7 +354,7 @@
    "source": [
     "# Provide your answer below.\n",
     "\n",
-    "\n"
+    "Yes, the update found the rows where person = 'roe' and updated teh reading in these rows by adding 0.01\n"
    ]
   },
   {
@@ -390,7 +400,19 @@
     "# Copy - Paste - Edit your trigger function below this line\n",
     "\n",
     "\n",
-    "\n",
+    "CREATE OR REPLACE FUNCTION may96c.audit_may96c_survey_reading_insert()\n",
+    "  RETURNS TRIGGER \n",
+    "  AS\n",
+    "$$\n",
+    "BEGIN\n",
+    "   INSERT INTO may96c.survey_audit\n",
+    "       (taken, person, quant, old_reading, new_reading)\n",
+    "   VALUES\n",
+    "       (NEW.taken, NEW.person, NEW.quant, NULL, NEW.reading);\n",
+    "   RETURN NEW;\n",
+    "END;\n",
+    "$$\n",
+    "LANGUAGE PLPGSQL;\n",
     "\n"
    ]
   },
@@ -407,7 +429,7 @@
    "source": [
     "# Provide 2.2. Answer: \n",
     "\n",
-    "\n",
+    "new is used to represent the rows after the table change (from UPDATE)\n",
     "\n",
     "\n"
    ]
@@ -438,13 +460,13 @@
     "# Copy - Paste - Edit your trigger function below this line\n",
     "\n",
     "\n",
-    "DROP TRIGGER IF EXISTS scottgs_survey_insert_audit ON scottgs.survey;\n",
+    "DROP TRIGGER IF EXISTS may96c_survey_insert_audit ON may96c.survey;\n",
     "\n",
-    "CREATE TRIGGER scottgs_survey_insert_audit\n",
+    "CREATE TRIGGER may96c_survey_insert_audit\n",
     "  AFTER INSERT\n",
-    "  ON scottgs.survey\n",
+    "  ON may96c.survey\n",
     "  FOR EACH ROW\n",
-    "  EXECUTE PROCEDURE scottgs.audit_scottgs_survey_reading_insert();\n"
+    "  EXECUTE PROCEDURE may96c.audit_may96c_survey_reading_insert();\n"
    ]
   },
   {
@@ -487,13 +509,12 @@
    "source": [
     "# Paste your Edit of the UPDATE statement below this line\n",
     "\n",
-    "\n",
+    "INSERT INTO may96c.survey VALUES (619,'roe','rad',101);\n",
     "\n",
     "\n",
     "# Paste your Edit of the SELECT and Result statement below this line\n",
     "\n",
-    "\n",
-    "\n",
+    "select * from may96c.survey_audit ;\n",
     "\n"
    ]
   },
@@ -550,7 +571,12 @@
    "source": [
     "# 3.1 Copy - Paste - Edit the insert statement below this line.\n",
     "\n",
-    "\n"
+    "INSERT INTO may96c.survey VALUES \n",
+    "(619,'lake','rad',8.72),\n",
+    "(619,'lake','sal',2.03),\n",
+    "(622,'lake','rad',8.8),\n",
+    "(622,'lake','sal',1.9)\n",
+    ";\n"
    ]
   },
   {
@@ -559,7 +585,13 @@
    "source": [
     "# 3.2 Show Result of running the insert statement in the terminal\n",
     "\n",
-    "\n"
+    "dsa_student=> INSERT INTO may96c.survey VALUES\n",
+    "dsa_student-> (619,'lake','rad',8.72),\n",
+    "dsa_student-> (619,'lake','sal',2.03),\n",
+    "dsa_student-> (622,'lake','rad',8.8),\n",
+    "dsa_student-> (622,'lake','sal',1.9)\n",
+    "dsa_student-> ;\n",
+    "INSERT 0 4\n"
    ]
   },
   {
@@ -567,7 +599,37 @@
    "metadata": {},
    "source": [
     "# 3.3 Show the data in the survey table\n",
-    "\n",
+    "dsa_student=> SELECT * FROM may96c.survey\n",
+    "dsa_student-> ;\n",
+    " taken | person | quant | reading\n",
+    "-------+--------+-------+---------\n",
+    "   619 | dyer   | rad   |    9.82\n",
+    "   619 | dyer   | sal   |    0.13\n",
+    "   622 | dyer   | rad   |     7.8\n",
+    "   622 | dyer   | sal   |    0.09\n",
+    "   734 | pb     | rad   |    8.41\n",
+    "   734 | lake   | sal   |    0.05\n",
+    "   734 | pb     | temp  |   -21.5\n",
+    "   735 | pb     | rad   |    7.22\n",
+    "   735 |        | sal   |    0.06\n",
+    "   735 |        | temp  |     -26\n",
+    "   751 | pb     | rad   |    4.35\n",
+    "   751 | pb     | temp  |   -18.5\n",
+    "   751 | lake   | sal   |     0.1\n",
+    "   752 | lake   | rad   |    2.19\n",
+    "   752 | lake   | sal   |    0.09\n",
+    "   752 | lake   | temp  |     -16\n",
+    "   837 | lake   | rad   |    1.46\n",
+    "   837 | lake   | sal   |    0.21\n",
+    "   752 | roe    | sal   |   41.61\n",
+    "   837 | roe    | sal   |   22.51\n",
+    "   844 | roe    | rad   |   11.26\n",
+    "   619 | roe    | rad   |     101\n",
+    "   619 | lake   | rad   |    8.72\n",
+    "   619 | lake   | sal   |    2.03\n",
+    "   622 | lake   | rad   |     8.8\n",
+    "   622 | lake   | sal   |     1.9\n",
+    "(26 rows)\n",
     "\n"
    ]
   },
@@ -577,7 +639,15 @@
    "source": [
     "# 3.4 Show the resulting audit rows.\n",
     "\n",
-    "\n"
+    "dsa_student=> SELECT * FROM Survey_Audit ;\n",
+    " taken | person | quant |          change_time          | old_reading | new_reading\n",
+    "-------+--------+-------+-------------------------------+-------------+-------------\n",
+    "   619 | roe    | rad   | 2021-11-20 13:50:55.378257-06 |             |         101\n",
+    "   619 | lake   | rad   | 2021-11-20 13:58:55.086594-06 |             |        8.72\n",
+    "   619 | lake   | sal   | 2021-11-20 13:58:55.086594-06 |             |        2.03\n",
+    "   622 | lake   | rad   | 2021-11-20 13:58:55.086594-06 |             |         8.8\n",
+    "   622 | lake   | sal   | 2021-11-20 13:58:55.086594-06 |             |         1.9\n",
+    "(5 rows)\n"
    ]
   },
   {
@@ -593,7 +663,7 @@
    "source": [
     "# Write your answer below this line.\n",
     "\n",
-    "\n"
+    "4, because our trigger adds values that have been added using INSERT\n"
    ]
   },
   {
