--- a/module5/practices/ViewPractice.ipynb
+++ b/module5/practices/ViewPractice.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -349,11 +348,11 @@
    "source": [
     "# 1.1 SQL\n",
     "CREATE OR REPLACE VIEW\n",
-    "    SSO.dr1_measurements\n",
+    "    may96c.dr1_measurements\n",
     "AS\n",
     "SELECT v.dated as date_taken\n",
     "    , s.quant, s.reading\n",
-    "FROM SSO.visited v JOIN SSO.survey s ON (v.id::int=s.taken::int)\n",
+    "FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
     "WHERE v.site='DR-1';\n",
     "\n",
     "\n"
@@ -365,6 +364,20 @@
    "source": [
     "# 1.2 Definition from DB\n",
     "\n",
+    "dsa_student=> \\d+ may96c.dr1_measurements\n",
+    "                       View \"may96c.dr1_measurements\"\n",
+    "   Column   | Type | Collation | Nullable | Default | Storage  | Description\n",
+    "------------+------+-----------+----------+---------+----------+-------------\n",
+    " date_taken | text |           |          |         | extended |\n",
+    " quant      | text |           |          |         | extended |\n",
+    " reading    | real |           |          |         | plain    |\n",
+    "View definition:\n",
+    " SELECT v.dated AS date_taken,\n",
+    "    s.quant,\n",
+    "    s.reading\n",
+    "   FROM visited v\n",
+    "     JOIN survey s ON v.id::integer = s.taken\n",
+    "  WHERE v.site = 'DR-1'::text;\n",
     "\n"
    ]
   },
@@ -373,7 +386,21 @@
    "metadata": {},
    "source": [
     "# 1.3 Paste Select * Results Here\n",
-    "\n",
+    "dsa_student=> select * from may96c.dr1_measurements\n",
+    "dsa_student-> ;\n",
+    " date_taken | quant | reading\n",
+    "------------+-------+---------\n",
+    " 1927-02-08 | rad   |    9.82\n",
+    " 1927-02-08 | sal   |    0.13\n",
+    " 1927-02-10 | rad   |     7.8\n",
+    " 1927-02-10 | sal   |    0.09\n",
+    " 1932-03-22 | rad   |   11.26\n",
+    " 1927-02-08 | rad   |     101\n",
+    " 1927-02-08 | rad   |    8.72\n",
+    " 1927-02-08 | sal   |    2.03\n",
+    " 1927-02-10 | rad   |     8.8\n",
+    " 1927-02-10 | sal   |     1.9\n",
+    "(10 rows)\n",
     "\n"
    ]
   },
@@ -425,13 +452,15 @@
     "# 2.1 SQL\n",
     "\n",
     "<Add VIEW Creating elements along with the below SQL>\n",
-    "\n",
+    "CREATE OR REPLACE VIEW\n",
+    "    may96c.rad_long_lad\n",
+    "AS\n",
     "SELECT v.dated as date_taken\n",
     "    , place.lat as latitude\n",
     "    , place.long as longitude\n",
     "    , s.reading as radiation\n",
-    "FROM SSO.visited v JOIN SSO.survey s ON (v.id::int=s.taken::int)\n",
-    "JOIN SSO.site as place ON (place.name=v.site)\n",
+    "FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
+    "JOIN may96c.site as place ON (place.name=v.site)\n",
     "WHERE s.quant='rad';\n"
    ]
   },
@@ -441,7 +470,23 @@
    "source": [
     "# 2.2 Definition from DB\n",
     "\n",
-    "\n"
+    "dsa_student=> \\d+ may96c.rad_long_lad\n",
+    "                         View \"may96c.rad_long_lad\"\n",
+    "   Column   | Type | Collation | Nullable | Default | Storage  | Description\n",
+    "------------+------+-----------+----------+---------+----------+-------------\n",
+    " date_taken | text |           |          |         | extended |\n",
+    " latitude   | real |           |          |         | plain    |\n",
+    " longitude  | real |           |          |         | plain    |\n",
+    " radiation  | real |           |          |         | plain    |\n",
+    "View definition:\n",
+    " SELECT v.dated AS date_taken,\n",
+    "    place.lat AS latitude,\n",
+    "    place.long AS longitude,\n",
+    "    s.reading AS radiation\n",
+    "   FROM visited v\n",
+    "     JOIN survey s ON v.id::integer = s.taken\n",
+    "     JOIN site place ON place.name = v.site\n",
+    "  WHERE s.quant = 'rad'::text;\n"
    ]
   },
   {
@@ -450,7 +495,22 @@
    "source": [
     "# 2.3 Paste Select * Results Here\n",
     "\n",
-    "\n"
+    "dsa_student=> select * from may96c.rad_long_lad\n",
+    "dsa_student-> ;\n",
+    " date_taken | latitude | longitude | radiation\n",
+    "------------+----------+-----------+-----------\n",
+    " 1932-03-22 |   -49.85 |   -128.57 |     11.26\n",
+    " 1927-02-10 |   -49.85 |   -128.57 |       7.8\n",
+    " 1927-02-10 |   -49.85 |   -128.57 |       8.8\n",
+    " 1927-02-08 |   -49.85 |   -128.57 |      9.82\n",
+    " 1927-02-08 |   -49.85 |   -128.57 |       101\n",
+    " 1927-02-08 |   -49.85 |   -128.57 |      8.72\n",
+    "            |   -47.15 |   -126.72 |      2.19\n",
+    " 1930-02-26 |   -47.15 |   -126.72 |      4.35\n",
+    " 1930-01-12 |   -47.15 |   -126.72 |      7.22\n",
+    " 1930-01-07 |   -47.15 |   -126.72 |      8.41\n",
+    " 1932-01-14 |   -48.87 |    -123.4 |      1.46\n",
+    "(11 rows)\n"
    ]
   },
   {
@@ -490,14 +550,19 @@
     "# 3.1 SQL\n",
     "\n",
     "\n",
-    "<Define your view here by combining the elements of #1 and #2 above>\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# 3.2 Definition from DB\n",
+    "<Define your view here by combining the elements of #1 and #2 above>\n",
+    "\n",
+    "CREATE OR REPLACE VIEW\n",
+    "    may96c.rad_long_lat_dr1\n",
+    "AS\n",
+    "SELECT v.dated as date_taken\n",
+    "    , place.lat as latitude\n",
+    "    , place.long as longitude\n",
+    "    , s.reading as radiation\n",
+    "    , s.quant as quant\n",
+    "FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
+    "JOIN may96c.site as place ON (place.name=v.site)\n",
+    "WHERE s.quant='rad' AND v.site = 'DR-1';\n",
     "\n",
     "\n"
    ]
@@ -506,8 +571,46 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# 3.3 Paste Select * Results Here\n",
+    "# 3.2 Definition from DB\n",
     "\n",
+    "dsa_student=> \\d+ may96c.rad_long_lat_dr1 ;\n",
+    "                       View \"may96c.rad_long_lat_dr1\"\n",
+    "   Column   | Type | Collation | Nullable | Default | Storage  | Description\n",
+    "------------+------+-----------+----------+---------+----------+-------------\n",
+    " date_taken | text |           |          |         | extended |\n",
+    " latitude   | real |           |          |         | plain    |\n",
+    " longitude  | real |           |          |         | plain    |\n",
+    " radiation  | real |           |          |         | plain    |\n",
+    " quant      | text |           |          |         | extended |\n",
+    "View definition:\n",
+    " SELECT v.dated AS date_taken,\n",
+    "    place.lat AS latitude,\n",
+    "    place.long AS longitude,\n",
+    "    s.reading AS radiation,\n",
+    "    s.quant\n",
+    "   FROM visited v\n",
+    "     JOIN survey s ON v.id::integer = s.taken\n",
+    "     JOIN site place ON place.name = v.site\n",
+    "  WHERE s.quant = 'rad'::text AND v.site = 'DR-1'::text;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# 3.3 Paste Select * Results Here\n",
+    " dsa_student=> select * from may96c.rad_long_lat_dr1\n",
+    "dsa_student-> ;\n",
+    " date_taken | latitude | longitude | radiation | quant\n",
+    "------------+----------+-----------+-----------+-------\n",
+    " 1927-02-08 |   -49.85 |   -128.57 |      9.82 | rad\n",
+    " 1927-02-10 |   -49.85 |   -128.57 |       7.8 | rad\n",
+    " 1932-03-22 |   -49.85 |   -128.57 |     11.26 | rad\n",
+    " 1927-02-08 |   -49.85 |   -128.57 |       101 | rad\n",
+    " 1927-02-08 |   -49.85 |   -128.57 |      8.72 | rad\n",
+    " 1927-02-10 |   -49.85 |   -128.57 |       8.8 | rad\n",
+    "(6 rows)\n",
     "\n"
    ]
   },
