--- a/module5/exercises/ViewExercise.ipynb
+++ b/module5/exercises/ViewExercise.ipynb
@@ -332,7 +332,16 @@
    "source": [
     "# 1.1 SQL\n",
     "\n",
-    "\n"
+    "CREATE OR REPLACE VIEW\n",
+    "    may96c.all_dr_measurements\n",
+    "AS\n",
+    "SELECT v.dated as date_taken\n",
+    "    , s.quant, s.reading, v.site\n",
+    "FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
+    "WHERE v.site IN  \n",
+    "(SELECT v.site\n",
+    "FROM may96c.visited\n",
+    "WHERE v.site LIKE 'DR-1' OR v.site LIKE 'DR-3');\n"
    ]
   },
   {
@@ -341,7 +350,24 @@
    "source": [
     "# 1.2 Definition from DB\n",
     "\n",
-    "\n"
+    "dsa_student=> \\d+ may96c.all_dr_measurements\n",
+    "                      View \"may96c.all_dr_measurements\"\n",
+    "   Column   | Type | Collation | Nullable | Default | Storage  | Description\n",
+    "------------+------+-----------+----------+---------+----------+-------------\n",
+    " date_taken | text |           |          |         | extended |\n",
+    " quant      | text |           |          |         | extended |\n",
+    " reading    | real |           |          |         | plain    |\n",
+    " site       | text |           |          |         | extended |\n",
+    "View definition:\n",
+    " SELECT v.dated AS date_taken,\n",
+    "    s.quant,\n",
+    "    s.reading,\n",
+    "    v.site\n",
+    "   FROM visited v\n",
+    "     JOIN survey s ON v.id::integer = s.taken\n",
+    "  WHERE (v.site IN ( SELECT v.site\n",
+    "           FROM visited\n",
+    "          WHERE v.site ~~ 'DR-1'::text OR v.site ~~ 'DR-3'::text));\n"
    ]
   },
   {
@@ -350,6 +376,30 @@
    "source": [
     "# 1.3 Paste Select * Results Here\n",
     "\n",
+    "dsa_student=> select * FROM may96c.all_dr_measurements\n",
+    "dsa_student-> ;\n",
+    " date_taken | quant | reading | site\n",
+    "------------+-------+---------+------\n",
+    " 1927-02-08 | rad   |     101 | DR-1\n",
+    " 1927-02-08 | sal   |    0.13 | DR-1\n",
+    " 1927-02-08 | rad   |    9.82 | DR-1\n",
+    " 1927-02-10 | sal   |    0.09 | DR-1\n",
+    " 1927-02-10 | rad   |     7.8 | DR-1\n",
+    " 1930-01-07 | temp  |   -21.5 | DR-3\n",
+    " 1930-01-07 | sal   |    0.05 | DR-3\n",
+    " 1930-01-07 | rad   |    8.41 | DR-3\n",
+    " 1930-01-12 | temp  |     -26 | DR-3\n",
+    " 1930-01-12 | sal   |    0.06 | DR-3\n",
+    " 1930-01-12 | rad   |    7.22 | DR-3\n",
+    " 1930-02-26 | sal   |     0.1 | DR-3\n",
+    " 1930-02-26 | temp  |   -18.5 | DR-3\n",
+    " 1930-02-26 | rad   |    4.35 | DR-3\n",
+    "            | sal   |   41.61 | DR-3\n",
+    "            | temp  |     -16 | DR-3\n",
+    "            | sal   |    0.09 | DR-3\n",
+    "            | rad   |    2.19 | DR-3\n",
+    " 1932-03-22 | rad   |   11.26 | DR-1\n",
+    "(19 rows)\n",
     "\n"
    ]
   },
@@ -367,6 +417,14 @@
    "source": [
     "# 2.1 SQL\n",
     "\n",
+    "CREATE OR REPLACE VIEW\n",
+    "    may96c.anderson_lake_collections\n",
+    "AS\n",
+    "SELECT v.dated as date_taken, s.reading, ss.lat as Latitude, ss.long as Longitude, s.person\n",
+    "FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
+    "JOIN may96c.site ss ON v.site = ss.name\n",
+    "WHERE s.person = 'lake' ;\n",
+    "\n",
     "\n"
    ]
   },
@@ -376,7 +434,26 @@
    "source": [
     "# 2.2 Definition from DB\n",
     "\n",
-    "\n"
+    "\n",
+    "dsa_student=> \\d+ may96c.anderson_lake_collections\n",
+    "                   View \"may96c.anderson_lake_collections\"\n",
+    "   Column   | Type | Collation | Nullable | Default | Storage  | Description\n",
+    "------------+------+-----------+----------+---------+----------+-------------\n",
+    " date_taken | text |           |          |         | extended |\n",
+    " reading    | real |           |          |         | plain    |\n",
+    " latitude   | real |           |          |         | plain    |\n",
+    " longitude  | real |           |          |         | plain    |\n",
+    " person     | text |           |          |         | extended |\n",
+    "View definition:\n",
+    " SELECT v.dated AS date_taken,\n",
+    "    s.reading,\n",
+    "    ss.lat AS latitude,\n",
+    "    ss.long AS longitude,\n",
+    "    s.person\n",
+    "   FROM visited v\n",
+    "     JOIN survey s ON v.id::integer = s.taken\n",
+    "     JOIN site ss ON v.site = ss.name\n",
+    "  WHERE s.person = 'lake'::text;"
    ]
   },
   {
@@ -385,6 +462,17 @@
    "source": [
     "# 2.3 Paste Select * Results Here\n",
     "\n",
+    "dsa_student=> select * FROM may96c.anderson_lake_collections;\n",
+    " date_taken | reading | latitude | longitude | person\n",
+    "------------+---------+----------+-----------+--------\n",
+    "            |    2.19 |   -47.15 |   -126.72 | lake\n",
+    "            |    0.09 |   -47.15 |   -126.72 | lake\n",
+    "            |     -16 |   -47.15 |   -126.72 | lake\n",
+    " 1930-02-26 |     0.1 |   -47.15 |   -126.72 | lake\n",
+    " 1930-01-07 |    0.05 |   -47.15 |   -126.72 | lake\n",
+    " 1932-01-14 |    1.46 |   -48.87 |    -123.4 | lake\n",
+    " 1932-01-14 |    0.21 |   -48.87 |    -123.4 | lake\n",
+    "(7 rows)\n",
     "\n"
    ]
   },
@@ -403,7 +491,13 @@
    "source": [
     "# 3.1 SQL\n",
     "\n",
-    "\n",
+    "CREATE OR REPLACE VIEW\n",
+    "    may96c.undated_survey_measurements\n",
+    "AS\n",
+    "SELECT s.reading, s.quant, ss.lat as Latitude, ss.long as Longitude, v.site, s.person\n",
+    "FROM may96c.visited v JOIN may96c.survey s ON (v.id::int=s.taken::int)\n",
+    "JOIN may96c.site ss ON v.site = ss.name\n",
+    "WHERE v.dated IS NULL\n",
     "\n"
    ]
   },
@@ -413,6 +507,27 @@
    "source": [
     "# 3.2 Definition from DB\n",
     "\n",
+    "dsa_student=> \\d+ may96c.undated_survey_measurements\n",
+    "                 View \"may96c.undated_survey_measurements\"\n",
+    "  Column   | Type | Collation | Nullable | Default | Storage  | Description\n",
+    "-----------+------+-----------+----------+---------+----------+-------------\n",
+    " reading   | real |           |          |         | plain    |\n",
+    " quant     | text |           |          |         | extended |\n",
+    " latitude  | real |           |          |         | plain    |\n",
+    " longitude | real |           |          |         | plain    |\n",
+    " site      | text |           |          |         | extended |\n",
+    " person    | text |           |          |         | extended |\n",
+    "View definition:\n",
+    " SELECT s.reading,\n",
+    "    s.quant,\n",
+    "    ss.lat AS latitude,\n",
+    "    ss.long AS longitude,\n",
+    "    v.site,\n",
+    "    s.person\n",
+    "   FROM visited v\n",
+    "     JOIN survey s ON v.id::integer = s.taken\n",
+    "     JOIN site ss ON v.site = ss.name\n",
+    "  WHERE v.dated IS NULL;\n",
     "\n"
    ]
   },
@@ -422,7 +537,15 @@
    "source": [
     "# 3.3 Paste Select * Results Here\n",
     "\n",
-    "\n"
+    "dsa_student=> select * FROM may96c.undated_survey_measurements\n",
+    "dsa_student-> ;\n",
+    " reading | quant | latitude | longitude | site | person\n",
+    "---------+-------+----------+-----------+------+--------\n",
+    "   41.61 | sal   |   -47.15 |   -126.72 | DR-3 | roe\n",
+    "     -16 | temp  |   -47.15 |   -126.72 | DR-3 | lake\n",
+    "    0.09 | sal   |   -47.15 |   -126.72 | DR-3 | lake\n",
+    "    2.19 | rad   |   -47.15 |   -126.72 | DR-3 | lake\n",
+    "(4 rows)\n"
    ]
   },
   {
